--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skaya",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "CLI SDK for full-stack automation: scaffold frontend, backend, middleware & routes. Future-ready for Web3, integrations, server components & logging.",
   "main": "dist/action.js",
   "types": "dist/action.d.ts",
@@ -20,13 +20,13 @@
     "@types/shelljs": "^0.8.15",
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
+    "dotenv": "^16.4.7",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.5.0",
+    "openai": "^4.91.1",
     "shelljs": "^0.9.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
-  },
-  "devDependencies": {
   },
   "repository": {
     "type": "git",
@@ -68,5 +68,4 @@
     "serverless",
     "cloud"
   ]
-
 }
