--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "skaya",
-  "version": "1.1.4",
+  "version": "1.1.8",
+  "main": "dist/action.js",
+  "types": "dist/action.d.ts",
   "description": "CLI SDK for full-stack automation: scaffold frontend, backend, middleware & routes. Future-ready for Web3, integrations, server components & logging.",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r src/**/*.json dist/src/templates",
+    "build:windows": "tsc && xcopy /s /y src\\*.json dist\\",
     "prepublishOnly": "npm run build"
   },
-
+  "bin": {
+    "skaya": "./bin/skaya.ts"
+  },
   "author": "skaya-labs",
   "license": "ISC",
   "dependencies": {
