--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "skaya",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "main": "src/action.js",
   "types": "src/action.d.ts",
   "description": "CLI SDK for full-stack automation: scaffold frontend, backend & blockchain. Future-ready for Web3, integrations, server components & logging.",
   "scripts": {
-    "build": "tsc && cp -r src/**/*.json dist/src/templates",
+    "build": "tsc",
     "build:windows": "tsc && xcopy /s /y src\\*.json dist\\",
     "prepublishOnly": "npm run build"
   },
@@ -15,6 +15,8 @@
   "author": "skaya-labs",
   "license": "ISC",
   "dependencies": {
+    "@storybook/react": "^8.6.12",
+    "@testing-library/react": "^16.3.0",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^22.13.13",
@@ -26,7 +28,8 @@
     "openai": "^4.91.1",
     "shelljs": "^0.9.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vitest": "^3.1.1"
   },
   "repository": {
     "type": "git",
