--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skaya",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "main": "src/action.js",
   "types": "src/action.d.ts",
   "description": "CLI SDK for full-stack automation: scaffold frontend, backend & blockchain. Future-ready for Web3, integrations, server components & logging.",
@@ -17,12 +17,9 @@
   "dependencies": {
     "@storybook/react": "^8.6.12",
     "@testing-library/react": "^16.3.0",
-    "@types/fs-extra": "^11.0.4",
-    "@types/inquirer": "^9.0.7",
-    "@types/node": "^22.13.13",
-    "@types/shelljs": "^0.8.15",
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
+    "dotenv": "^16.4.7",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.5.0",
     "openai": "^4.91.1",
@@ -72,6 +69,10 @@
     "cloud"
   ],
   "devDependencies": {
-    "@types/react": "^19.1.0"
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^22.13.13",
+    "@types/react": "^19.1.0",
+    "@types/shelljs": "^0.8.15"
   }
 }
