--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "skaya-labs",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@storybook/react": "^8.6.12",
     "@testing-library/react": "^16.3.0",
     "chalk": "^5.4.1",
